[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/spritesheets/enemy-big.png" type="Texture" id=1]
[ext_resource path="res://src/Scripts/Actors/Enemy.gd" type="Script" id=2]
[ext_resource path="res://src/Scripts/Actors/Enemy3/Enemy3_Manager.gd" type="Script" id=3]
[ext_resource path="res://src/Scripts/Actors/Enemy3/Enemy3_Shoot.gd" type="Script" id=4]
[ext_resource path="res://src/Scripts/Actors/Enemy3/Enemy3_Movement.gd" type="Script" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 20.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 6 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 13, 7 )

[node name="Enemy3" type="Node2D"]
script = ExtResource( 2 )
max_hp = 120
custom_scale = 2.0
explosion_count = 10
point_value = 100000

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
collision_layer = 4
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="KinematicBody2D"]
frames = SubResource( 3 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 0, 9 )
shape = SubResource( 4 )

[node name="Hitbox" type="Area2D" parent="KinematicBody2D"]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/Hitbox"]
position = Vector2( 0, 9 )
shape = SubResource( 5 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="KinematicBody2D"]
position = Vector2( 1.19209e-07, 1 )
scale = Vector2( 1.3, 1.5 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="KinematicBody2D"]
position = Vector2( 0.5, 27 )
scale = Vector2( 1.35, 0.3 )
physics_process_parent = true

[node name="ShootManager" type="Node2D" parent="KinematicBody2D"]
script = ExtResource( 3 )

[node name="BulletSpawner" type="Position2D" parent="KinematicBody2D/ShootManager"]
position = Vector2( 0, 9 )
script = ExtResource( 4 )

[node name="LineTimer" type="Timer" parent="KinematicBody2D/ShootManager"]
wait_time = 0.05
autostart = true

[node name="FlowerTimer" type="Timer" parent="KinematicBody2D/ShootManager"]
autostart = true

[node name="WaitTimer" type="Timer" parent="KinematicBody2D"]
wait_time = 100.0
one_shot = true

[node name="ExplodeTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="body_entered" from="KinematicBody2D/Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="screen_exited" from="KinematicBody2D/VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="screen_entered" from="KinematicBody2D/VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_entered"]
[connection signal="timeout" from="KinematicBody2D/ShootManager/LineTimer" to="KinematicBody2D/ShootManager" method="_on_LineTimer_timeout"]
[connection signal="timeout" from="KinematicBody2D/ShootManager/FlowerTimer" to="KinematicBody2D/ShootManager" method="_on_FlowerTimer_timeout"]
[connection signal="timeout" from="KinematicBody2D/WaitTimer" to="KinematicBody2D" method="_on_WaitTimer_timeout"]
[connection signal="timeout" from="ExplodeTimer" to="." method="_on_ExplodeTimer_timeout"]
